[package]
name = "proptest-attr-macro"
version = "0.2.0-pre"
description = "Procedural attribute macro for writing proptest tests"
documentation = "https://docs.rs/proptest-attr-macro/*"
repository = "https://github.com/dcreager/proptest-attr-macro/"
readme = "README.md"
authors = ["Douglas Creager <dcreager@dcreager.net>"]
edition = "2018"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "dcreager/proptest-attr-macro" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.19"
quote = "0.6.8"
syn = { version = "0.15", features = ["full"] }

[dev-dependencies]
proptest = "0.9"
